added tags to services and companies
