# docs/swagger.json
@@ -1075,6 +1075,12 @@
                 },
                 "phone": {
                     "type": "string"
+                },
+                "tagsIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
@@ -1140,6 +1146,12 @@
                 },
                 "service_type_id": {
                     "type": "integer"
+                },
+                "tagsIds": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "text": {
                     "type": "string"
