# internal/app/apiserver/dtos/companydto.go
@@ -14,6 +14,7 @@ const (
 type CreateCompanyDto struct {
 	Avatar          []byte `json:"avatar"`
 	Name            string `json:"name" validate:"required,min=1,max=100"`
+	TagsIds         []int  `json:"tagsIds"`
 	Description     string `json:"description"`
 	Email           string `json:"email" validate:"required,email"`
 	Phone           string `json:"phone" validate:"required"`
@@ -22,24 +23,30 @@ type CreateCompanyDto struct {
 }
 
 type CreateCompanyResponse struct {
-	ID              int       `json:"id"`
-	Avatar          []byte    `json:"avatar"`
-	Name            string    `json:"name"`
-	Description     string    `json:"description"`
-	Email           string    `json:"email"`
-	Phone           string    `json:"phone"`
-	INN             string    `json:"inn"`
-	ManagerTelegram string    `json:"manager_telegram"`
-	CreatedAt       time.Time `json:"created_at"`
-	UpdatedAt       time.Time `json:"updated_at"`
+	ID              int         `json:"id"`
+	Avatar          []byte      `json:"avatar"`
+	Name            string      `json:"name"`
+	Description     string      `json:"description"`
+	Email           string      `json:"email"`
+	Phone           string      `json:"phone"`
+	INN             string      `json:"inn"`
+	ManagerTelegram string      `json:"manager_telegram"`
+	Tags            []model.Tag `json:"tags"`
+	CreatedAt       time.Time   `json:"created_at"`
+	UpdatedAt       time.Time   `json:"updated_at"`
 }
 
 func (t *CreateCompanyDto) ToModel() model.Company {
+	tags := make([]model.Tag, len(t.TagsIds))
+	for i, id := range t.TagsIds {
+		tags[i] = model.Tag{ID: id}
+	}
 	return model.Company{
 		Avatar:          t.Avatar,
 		Name:            t.Name,
 		Description:     t.Description,
 		Email:           t.Email,
+		Tags:            tags,
 		Phone:           t.Phone,
 		INN:             t.INN,
 		ManagerTelegram: t.ManagerTelegram,
@@ -55,6 +62,7 @@ func ModelToCreateCompanyResponse(company model.Company) CreateCompanyResponse {
 		Email:           company.Email,
 		Phone:           company.Phone,
 		INN:             company.INN,
+		Tags:            company.Tags,
 		ManagerTelegram: company.ManagerTelegram,
 		CreatedAt:       company.CreatedAt,
 		UpdatedAt:       company.UpdatedAt,
